# FraudWatchML

./: .gitignore  .replit  README.md  api.py  app.py  config.py  data_pipeline.py  export_project.py  fin_data.py  initialize_data.py  main.py  ml_pipeline.py  model_architecture.py  models.py  monitoring.py  pyproject.toml  routes.py  security.py  setup.sh  tfx_pipeline.py  upload_to_github.sh  utils.py
attached_assets/: Product Requirements Document (PRD)_ FraudWatch.txt
static/css/: custom.css
static/js/: dashboard.js  monitoring.js
templates/: 404.html  500.html  alert_form.html  alerts.html  base.html  dashboard.html  index.html  login.html  model_info.html  profile.html  transaction_detail.html  transaction_review.html
tests/: __init__.py  test_api.py  test_model.py
